added support for excluding lints, code formatting